// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RegexValidationOptions Regex Validator - collapsed 1`] = `
<RegexValidationOptions
  dataType={
    Immutable.Record {
      "conceptURI": undefined,
      "display": "Integer",
      "name": "int",
      "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
      "alternateRangeURI": "xsd:int",
      "shortDisplay": undefined,
      "lookupSchema": undefined,
      "lookupQuery": undefined,
    }
  }
  domainIndex={1}
  expanded={false}
  index={1}
  mvEnabled={true}
  onChange={[MockFunction]}
  onDelete={[MockFunction]}
  onExpand={[MockFunction]}
  validator={
    Immutable.Record {
      "type": "RegEx",
      "name": "Test Validator",
      "properties": Immutable.Record {
        "failOnMatch": true,
        "validValues": undefined,
        "valueUpdates": undefined,
      },
      "extraProperties": Immutable.Record {
        "failOnMatch": false,
        "validValues": undefined,
        "valueUpdates": undefined,
      },
      "errorMessage": "Test Validation Failure",
      "description": "This is my validator description",
      "new": true,
      "shouldShowWarning": true,
      "rowId": 11266,
      "expression": "$[abc]",
    }
  }
  validatorIndex={0}
>
  <div
    className="domain-validator-panel"
    id="domain-regex-validator-0"
  >
    <div>
      <div>
        Test Validator: $[abc]
        <div
          className="domain-validator-collapse-icon"
          onClick={[Function]}
        >
          <span
            className="fa fa-pencil"
          />
        </div>
      </div>
    </div>
  </div>
</RegexValidationOptions>
`;

exports[`RegexValidationOptions Regex Validator - expanded 1`] = `
<RegexValidationOptions
  dataType={
    Immutable.Record {
      "conceptURI": undefined,
      "display": "Integer",
      "name": "int",
      "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
      "alternateRangeURI": "xsd:int",
      "shortDisplay": undefined,
      "lookupSchema": undefined,
      "lookupQuery": undefined,
    }
  }
  domainIndex={1}
  expanded={true}
  index={1}
  mvEnabled={true}
  onChange={[MockFunction]}
  onDelete={[MockFunction]}
  onExpand={[MockFunction]}
  validator={
    Immutable.Record {
      "type": "RegEx",
      "name": "Test Validator",
      "properties": Immutable.Record {
        "failOnMatch": true,
        "validValues": undefined,
        "valueUpdates": undefined,
      },
      "extraProperties": Immutable.Record {
        "failOnMatch": false,
        "validValues": undefined,
        "valueUpdates": undefined,
      },
      "errorMessage": "Test Validation Failure",
      "description": "This is my validator description",
      "new": true,
      "shouldShowWarning": true,
      "rowId": 11266,
      "expression": "$[abc]",
    }
  }
  validatorIndex={0}
>
  <div
    className="domain-validator-panel"
    id="domain-regex-validator-0"
  >
    <div>
      <Row
        bsClass="row"
        className="domain-validator-filter-row"
        componentClass="div"
      >
        <div
          className="domain-validator-filter-row row"
        >
          <Col
            bsClass="col"
            componentClass="div"
            xs={4}
          >
            <div
              className="col-xs-4"
            >
              <div>
                Regular Expression *
                <Component
                  id="tooltip"
                  required={true}
                  title="Regular Expression"
                >
                  <span
                    className="label-help-target"
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                  >
                    <span
                      className="label-help-icon fa fa-question-circle"
                    />
                    <Overlay
                      animation={[Function]}
                      placement="right"
                      rootClose={false}
                      show={false}
                    >
                      <Overlay
                        placement="right"
                        rootClose={false}
                        show={false}
                        transition={[Function]}
                      />
                    </Overlay>
                  </span>
                </Component>
              </div>
            </div>
          </Col>
          <Col
            bsClass="col"
            componentClass="div"
            xs={8}
          >
            <div
              className="col-xs-8"
            >
              <div>
                <FormControl
                  bsClass="form-control"
                  className="textarea-fullwidth"
                  componentClass="textarea"
                  id="domainpropertiesrow-expression-1-0"
                  name="domainpropertiesrow-expression"
                  onChange={[Function]}
                  rows={3}
                  value="$[abc]"
                >
                  <textarea
                    className="textarea-fullwidth form-control"
                    id="domainpropertiesrow-expression-1-0"
                    name="domainpropertiesrow-expression"
                    onChange={[Function]}
                    rows={3}
                    value="$[abc]"
                  />
                </FormControl>
              </div>
            </div>
          </Col>
        </div>
      </Row>
      <Row
        bsClass="row"
        className="domain-validator-filter-row"
        componentClass="div"
      >
        <div
          className="domain-validator-filter-row row"
        >
          <Col
            bsClass="col"
            componentClass="div"
            xs={4}
          >
            <div
              className="col-xs-4"
            >
              <div>
                Description
              </div>
            </div>
          </Col>
          <Col
            bsClass="col"
            componentClass="div"
            xs={8}
          >
            <div
              className="col-xs-8"
            >
              <div>
                <FormControl
                  bsClass="form-control"
                  className="textarea-fullwidth"
                  componentClass="textarea"
                  id="domainpropertiesrow-description-1-0"
                  name="domainpropertiesrow-description"
                  onChange={[Function]}
                  rows={3}
                  value="This is my validator description"
                >
                  <textarea
                    className="textarea-fullwidth form-control"
                    id="domainpropertiesrow-description-1-0"
                    name="domainpropertiesrow-description"
                    onChange={[Function]}
                    rows={3}
                    value="This is my validator description"
                  />
                </FormControl>
              </div>
            </div>
          </Col>
        </div>
      </Row>
      <Row
        bsClass="row"
        className="domain-validator-filter-row"
        componentClass="div"
      >
        <div
          className="domain-validator-filter-row row"
        >
          <Col
            bsClass="col"
            componentClass="div"
            xs={4}
          >
            <div
              className="col-xs-4"
            >
              <div>
                Error Message
                <Component
                  id="tooltip"
                  title="Error Message"
                >
                  <span
                    className="label-help-target"
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                  >
                    <span
                      className="label-help-icon fa fa-question-circle"
                    />
                    <Overlay
                      animation={[Function]}
                      placement="right"
                      rootClose={false}
                      show={false}
                    >
                      <Overlay
                        placement="right"
                        rootClose={false}
                        show={false}
                        transition={[Function]}
                      />
                    </Overlay>
                  </span>
                </Component>
              </div>
            </div>
          </Col>
          <Col
            bsClass="col"
            componentClass="div"
            xs={8}
          >
            <div
              className="col-xs-8"
            >
              <div>
                <FormControl
                  bsClass="form-control"
                  className="textarea-fullwidth"
                  componentClass="textarea"
                  id="domainpropertiesrow-errorMessage-1-0"
                  name="domainpropertiesrow-errorMessage"
                  onChange={[Function]}
                  rows={3}
                  value="Test Validation Failure"
                >
                  <textarea
                    className="textarea-fullwidth form-control"
                    id="domainpropertiesrow-errorMessage-1-0"
                    name="domainpropertiesrow-errorMessage"
                    onChange={[Function]}
                    rows={3}
                    value="Test Validation Failure"
                  />
                </FormControl>
              </div>
            </div>
          </Col>
        </div>
      </Row>
      <Row
        bsClass="row"
        componentClass="div"
      >
        <div
          className="row"
        >
          <Col
            bsClass="col"
            componentClass="div"
            xs={4}
          >
            <div
              className="col-xs-4"
            />
          </Col>
          <Col
            bsClass="col"
            className="domain-validation-failOnMatch-row"
            componentClass="div"
            xs={8}
          >
            <div
              className="domain-validation-failOnMatch-row col-xs-8"
            >
              <Checkbox
                bsClass="checkbox"
                checked={true}
                disabled={false}
                id="domainpropertiesrow-failOnMatch-1-0"
                inline={false}
                name="domainpropertiesrow-failOnMatch"
                onChange={[Function]}
                title=""
              >
                <div
                  className="checkbox"
                >
                  <label
                    title=""
                  >
                    <input
                      checked={true}
                      disabled={false}
                      id="domainpropertiesrow-failOnMatch-1-0"
                      name="domainpropertiesrow-failOnMatch"
                      onChange={[Function]}
                      type="checkbox"
                    />
                    Fail validation when pattern matches field value
                    <Component
                      id="tooltip"
                      title="Fail when pattern matches?"
                    >
                      <span
                        className="label-help-target"
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                      >
                        <span
                          className="label-help-icon fa fa-question-circle"
                        />
                        <Overlay
                          animation={[Function]}
                          placement="right"
                          rootClose={false}
                          show={false}
                        >
                          <Overlay
                            placement="right"
                            rootClose={false}
                            show={false}
                            transition={[Function]}
                          />
                        </Overlay>
                      </span>
                    </Component>
                  </label>
                </div>
              </Checkbox>
            </div>
          </Col>
        </div>
      </Row>
      <Row
        bsClass="row"
        componentClass="div"
      >
        <div
          className="row"
        >
          <Col
            bsClass="col"
            componentClass="div"
            xs={4}
          >
            <div
              className="col-xs-4"
            >
              <div>
                Name *
              </div>
            </div>
          </Col>
          <Col
            bsClass="col"
            componentClass="div"
            xs={8}
          >
            <div
              className="col-xs-8"
            >
              <FormControl
                bsClass="form-control"
                componentClass="input"
                id="domainpropertiesrow-name-1-0"
                name="domainpropertiesrow-name"
                onChange={[Function]}
                type="text"
                value="Test Validator"
              >
                <input
                  className="form-control"
                  id="domainpropertiesrow-name-1-0"
                  name="domainpropertiesrow-name"
                  onChange={[Function]}
                  type="text"
                  value="Test Validator"
                />
              </FormControl>
            </div>
          </Col>
        </div>
      </Row>
      <Row
        bsClass="row"
        componentClass="div"
      >
        <div
          className="row"
        >
          <Col
            bsClass="col"
            componentClass="div"
            xs={12}
          >
            <div
              className="col-xs-12"
            >
              <button
                className="domain-validation-delete btn btn-default"
                id="domainpropertiesrow-removeValidator-1-0"
                name="domainpropertiesrow-removeValidator"
                onClick={[Function]}
                type="button"
              >
                Remove Validator
              </button>
            </div>
          </Col>
        </div>
      </Row>
    </div>
  </div>
</RegexValidationOptions>
`;
